--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "startup": "node app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +14,9 @@
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.3"
+  },
+  "devDependencies": {
+    "chai": "^5.1.1",
+    "mocha": "^10.4.0"
   }
 }
